# wisflow

./: .gitignore  LICENSE  README.md  VoiceType AI - Windows智能语音输入法.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/: work-plan.md
docs/design/: Setting.pen
e2e/: integration-acceptance.spec.ts  settings-panel.spec.ts
electron/: main.ts  preload.ts
playwright-report/: index.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs
src/application/orchestrators/: VoiceInputOrchestrator.ts
src/application/orchestrators/__tests__/: ToggleMode.spec.ts  VoiceInputOrchestrator.hold.spec.ts  VoiceInputOrchestrator.integration.spec.ts  (+1 more)
src/infrastructure/audio/: TauriAudioCaptureAdapter.ts
src/infrastructure/clipboard/: ElectronClipboardAdapter.ts  TauriClipboardAdapter.ts
src/infrastructure/llm/: OpenAIPolishAdapter.ts
src/infrastructure/persistence/: ElectronStoreConfigRepository.ts  TauriStoreConfigRepository.ts
src/infrastructure/stt/: CloudSTTStrategy.ts  LocalWhisperStrategy.ts
src/presentation/: MicIndicatorApp.tsx  SettingsApp.tsx  createOrchestrator.ts
src/presentation/components/: MicIndicator.tsx  SettingsPanel.tsx
src/presentation/hooks/: useOrchestrator.ts
src/presentation/stores/: recordingStore.ts
tests/: setup.ts
(+62 files in other folders)
